@@ -4,7 +4,8 @@ Changes for 0.xxx [xxxxxxxxxx]
 ==============================
 
  o Moved getJdbcQueueManagerCommonTable from util.Global to JdbcQueueCommonTablePlugin so that the 
-   manager is not referenced outside the plugin it serves. (Still TODO move wipeOutDB from Global)
+   manager is not referenced outside the plugin it serves. Moved also wipeOutDB from Global to the
+   queue plugin).
 
  o Property loading cleanup in Global.java 
    Thanks to Peter Antman for the discussion
